--- a/src/openmp/lavaMD/Makefile
+++ b/src/openmp/lavaMD/Makefile
@@ -1,12 +1,17 @@
 CC=gcc
 OMP=-fopenmp
 
-intel:CC=icc -mmic -DMIC_NATIVE 
+intel:CC=icc -mmic -DMIC_NATIVE
 intel:OMP=-qopenmp
 
 SOURCES_CHECK=main_check.c kernel/kernel_cpu.c  ../../include/log_helper.c
-SOURCES_GEN=main.c kernel/kernel_cpu.c 
+SOURCES_GEN=main.c kernel/kernel_cpu.c
 APP_NAME=lavamd
+
+armv8:CC=aarch64-linux-gnu-gcc
+armv8:CC_FLAGS=-O3 -static -fopenmp -lm
+
+armv8: lava_generate lavamd lavamd_err_inj lavamd_timing
 
 general: lava_generate lavamd lavamd_err_inj lavamd_timing
 
@@ -27,5 +32,3 @@ lavamd_err_inj: $(SOURCES_CHECK)
 
 clean:
 	rm -f input_* output_* $(APP_NAME)_gen $(APP_NAME)_check $(APP_NAME)_timing $(APP_NAME)_err_inj
-
-
