--- a/src/openmp/quicksort/Makefile
+++ b/src/openmp/quicksort/Makefile
@@ -2,19 +2,29 @@
 CC = gcc
 CC_FLAGS = -fopenmp -O3
 
-intel:CC=icc -mmic -DMIC_NATIVE 
+intel:CC=icc -mmic -DMIC_NATIVE
 intel:CC_FLAGS=-qopenmp
+
+armv8:CC=aarch64-linux-gnu-gcc
+armv8:CC_FLAGS=-O3 -static -fopenmp
+
+arm:CC=arm-linux-gnueabihf-gcc
+arm:CC_FLAGS=-mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -fopenmp -static
 
 SOURCES_CHECK=quicksort_check.c ../../include/log_helper.c
 general:SOURCES_CHECK=quicksort_check.c ../../include/log_helper.c
+
+arm: quick_gen quick_check quick_err_inj quick_timing
+
+armv8: quick_gen quick_check quick_err_inj quick_timing
 
 general: quick_gen quick_check quick_err_inj quick_timing
 
 intel: quick_gen quick_check quick_err_inj quick_timing
 
 quick_gen: quicksort_gen.c generateInput.c
-	$(CC) $(CC_FLAGS) quicksort_gen.c -o quick_gen 
-	$(CC) $(CC_FLAGS) generateInput.c -o genInput 
+	$(CC) $(CC_FLAGS) quicksort_gen.c -o quick_gen
+	$(CC) $(CC_FLAGS) generateInput.c -o genInput
 
 quick_check: $(SOURCES_CHECK)
 	$(CC) $(CC_FLAGS) $(SOURCES_CHECK) -DLOGS -o quick_check
@@ -27,4 +37,3 @@ quick_timing: $(SOURCES_CHECK)
 
 clean:
 	rm -f genInput quick_gen quick_check quick_err_inj quick_timing
-
